Fixed more bugs
Also fixed the size issues

--- a/SmartSchoolSystem/SmartSchoolSystem/SmartSchoolSystem/www/index.html
+++ b/SmartSchoolSystem/SmartSchoolSystem/SmartSchoolSystem/www/index.html
@@ -1,10 +1,6 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!--
         Customize the content security policy in the meta tag below as needed. Add 'unsafe-inline' to default-src to enable inline JavaScript.
         For details, see http://go.microsoft.com/fwlink/?LinkID=617521
@@ -15,7 +11,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-    <title>Main</title>
+    <title>SSS</title>
     <style id="applicationStylesheet" type="text/css">
 
         body {
@@ -24,29 +20,39 @@
         }
 
         :root {
-            --web-view-ids: Main;
+            --web-view-ids: iPhone_6_7_8___1;
         }
 
-        #Main * {
+        #iPhone_6_7_8___1 * {
             margin: 0;
             padding: 0;
         }
 
-        #Main {
+        #iPhone_6_7_8___1 {
             position: absolute;
             box-sizing: border-box;
             background: #E5E5E5;
-            width: 414px;
-            height: 736px;
+            width: 375px;
+            height: 667px;
             font-family: "Helvetica";
             background-color: rgba(255,255,255,1);
             overflow: hidden;
             margin: 0;
             padding: 0;
             opacity: 1;
-            --web-view-name: Main;
-            --web-view-id: Main;
+            --web-view-name: iPhone 6/7/8 – 1;
+            --web-view-id: iPhone_6_7_8___1;
             --web-enable-deep-linking: true;
+        }
+
+        #Group_6 {
+            opacity: 1;
+            position: absolute;
+            width: 375px;
+            height: 667px;
+            left: 0px;
+            top: 0px;
+            overflow: visible;
         }
 
         #rectangle {
@@ -58,16 +64,16 @@
             transform: matrix(1,0,0,1,0,0);
             overflow: visible;
             position: absolute;
-            top: 670px;
+            top: 601px;
             left: 0px;
-            width: 414px;
+            width: 375px;
             height: 66px;
         }
 
         #Daniel_Riko {
             opacity: 1;
             position: absolute;
-            left: 142.58px;
+            left: 123px;
             top: 0px;
             box-sizing: border-box;
             margin: 0;
@@ -88,8 +94,8 @@
             position: absolute;
             width: 106px;
             height: 27px;
-            left: 154.099px;
-            top: 216.288px;
+            left: 134.587px;
+            top: 195.239px;
             overflow: visible;
         }
 
@@ -118,7 +124,7 @@
             width: 70px;
             height: 60px;
             left: 45px;
-            top: 180.639px;
+            top: 162.201px;
             overflow: visible;
         }
 
@@ -178,7 +184,7 @@
             overflow: visible;
             width: 117px;
             height: 116px;
-            left: 148.5px;
+            left: 129px;
             top: 61px;
         }
 
@@ -186,12 +192,12 @@
             opacity: 1;
             position: absolute;
             left: 31px;
-            top: 692px;
+            top: 623px;
             box-sizing: border-box;
             margin: 0;
             padding: 0;
             overflow: hidden;
-            width: 354px;
+            width: 315px;
             height: 23px;
             line-height: 24px;
             margin-top: -4px;
@@ -208,8 +214,8 @@
             position: absolute;
             width: 56px;
             height: 58px;
-            left: 282.632px;
-            top: 181.718px;
+            left: 251.842px;
+            top: 163.224px;
             overflow: visible;
         }
 
@@ -271,17 +277,17 @@
         .Rectangle_1 {
             position: absolute;
             overflow: visible;
-            width: 414px;
+            width: 375px;
             height: 330px;
             left: 0px;
-            top: 318.089px;
+            top: 249.089px;
         }
 
         #level___10 {
             opacity: 1;
             position: absolute;
-            left: 142.58px;
-            top: 285.947px;
+            left: 123px;
+            top: 257.227px;
             box-sizing: border-box;
             margin: 0;
             padding: 0;
@@ -299,8 +305,8 @@
         #ID200xp__left {
             opacity: 1;
             position: absolute;
-            left: 142.58px;
-            top: 342.904px;
+            left: 123px;
+            top: 308.463px;
             box-sizing: border-box;
             margin: 0;
             padding: 0;
@@ -318,10 +324,10 @@
         #Level_bar {
             opacity: 1;
             position: absolute;
-            width: 374px;
+            width: 335px;
             height: 21px;
             left: 20px;
-            top: 329.209px;
+            top: 297.439px;
             overflow: visible;
         }
 
@@ -347,7 +353,7 @@
         #level_11 {
             opacity: 1;
             position: absolute;
-            left: 309px;
+            left: 270px;
             top: 0px;
             box-sizing: border-box;
             margin: 0;
@@ -366,10 +372,10 @@
         #Group_1 {
             opacity: 1;
             position: absolute;
-            width: 309px;
+            width: 270px;
             height: 0px;
             left: 52.5px;
-            top: 327.199px;
+            top: 296.524px;
             overflow: visible;
         }
 
@@ -389,7 +395,7 @@
             position: absolute;
             top: 0px;
             left: 0px;
-            width: 314px;
+            width: 275px;
             height: 5px;
         }
 
@@ -409,17 +415,17 @@
             position: absolute;
             top: 0px;
             left: 0px;
-            width: 268px;
+            width: 229px;
             height: 5px;
         }
 
         #Group_4 {
             opacity: 1;
             position: absolute;
-            width: 374px;
+            width: 335px;
             height: 86px;
             left: 20px;
-            top: 434.046px;
+            top: 387.97px;
             overflow: visible;
         }
 
@@ -437,7 +443,7 @@
         .Rectangle_8 {
             position: absolute;
             overflow: visible;
-            width: 374px;
+            width: 335px;
             height: 86px;
             left: 0px;
             top: 0px;
@@ -446,7 +452,7 @@
         #Reminder {
             opacity: 1;
             position: absolute;
-            left: 109.609px;
+            left: 90px;
             top: 11px;
             box-sizing: border-box;
             margin: 0;
@@ -465,7 +471,7 @@
         #ID11_30 {
             opacity: 1;
             position: absolute;
-            left: 136.584px;
+            left: 117px;
             top: 43px;
             box-sizing: border-box;
             margin: 0;
@@ -483,13 +489,13 @@
             color: rgba(101,105,216,1);
         }
 
-        #Group_4_A0_Group_8 {
+        #Group_4_A0_Group_9 {
             opacity: 1;
             position: absolute;
-            width: 374px;
+            width: 335px;
             height: 86px;
             left: 20px;
-            top: 575.841px;
+            top: 492.841px;
             overflow: visible;
         }
 
@@ -507,7 +513,7 @@
         .Rectangle_8_A0_Rectangle_3 {
             position: absolute;
             overflow: visible;
-            width: 374px;
+            width: 335px;
             height: 86px;
             left: 0px;
             top: 0px;
@@ -516,7 +522,7 @@
         #Notification {
             opacity: 1;
             position: absolute;
-            left: 109.609px;
+            left: 90px;
             top: 11px;
             box-sizing: border-box;
             margin: 0;
@@ -541,7 +547,7 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
-            width: 309px;
+            width: 270px;
             height: 32px;
             line-height: 16px;
             margin-top: -2px;
@@ -555,94 +561,96 @@
     </style>
 </head>
 <body>
-    <div id="Main">
-        <svg class="rectangle" viewBox="0 0 414 66">
-            <path id="rectangle" d="M 0 0 L 414 0 L 414 66 L 0 66 L 0 0 Z">
-            </path>
-        </svg>
-        <div id="Daniel_Riko">
-            <span>Daniel Riko</span>
-        </div>
-        <div id="reviews_link">
-            <div id="main_profile">
-                <span>main profile</span>
+    <div id="iPhone_6_7_8___1">
+        <div id="Group_6">
+            <svg class="rectangle" viewBox="0 0 375 66">
+                <path id="rectangle" d="M 0 0 L 375 0 L 375 66 L 0 66 L 0 0 Z">
+                </path>
+            </svg>
+            <div id="Daniel_Riko">
+                <span>Daniel Riko</span>
             </div>
-        </div>
-        <div id="followers_link">
-            <div id="notification">
-                <span>notification</span>
-            </div>
-            <div id="ID3_">
-                <span>3<br /></span>
-            </div>
-        </div>
-        <svg class="Ellipse_1">
-            <ellipse id="Ellipse_1" rx="58.5" ry="58" cx="58.5" cy="58">
-            </ellipse>
-        </svg>
-        <div id="button_text">
-            <span>Main Profile </span>
-        </div>
-        <div id="Group_3">
-            <div id="comments_link">
-                <div id="ID3">
-                    <span>3</span>
+            <div id="reviews_link">
+                <div id="main_profile">
+                    <span>main profile</span>
                 </div>
             </div>
-            <div id="reminder">
-                <span>reminder</span>
+            <div id="followers_link">
+                <div id="notification">
+                    <span>notification</span>
+                </div>
+                <div id="ID3_">
+                    <span>3<br /></span>
+                </div>
             </div>
-        </div>
-        <svg class="Rectangle_1">
-            <rect id="Rectangle_1" rx="0" ry="0" x="0" y="0" width="414" height="330">
-            </rect>
-        </svg>
-        <div id="level___10">
-            <span>level : 10</span>
-        </div>
-        <div id="ID200xp__left">
-            <span>200xp <br />left</span>
-        </div>
-        <div id="Level_bar">
-            <div id="level_10">
-                <span>level 10</span>
-            </div>
-            <div id="level_11">
-                <span>level 11</span>
-            </div>
-        </div>
-        <div id="Group_1">
-            <svg class="Line_1">
-                <path id="Line_1" d="M 0 0 L 309 0">
-                </path>
+            <svg class="Ellipse_1">
+                <ellipse id="Ellipse_1" rx="58.5" ry="58" cx="58.5" cy="58">
+                </ellipse>
             </svg>
-            <svg class="Line_2">
-                <path id="Line_2" d="M 0 0 L 263 0">
-                </path>
-            </svg>
-        </div>
-        <div id="Group_4">
-            <svg class="Rectangle_8">
-                <rect id="Rectangle_8" rx="43" ry="43" x="0" y="0" width="374" height="86">
+            <div id="button_text">
+                <span>Main Profile </span>
+            </div>
+            <div id="Group_3">
+                <div id="comments_link">
+                    <div id="ID3">
+                        <span>3</span>
+                    </div>
+                </div>
+                <div id="reminder">
+                    <span>reminder</span>
+                </div>
+            </div>
+            <svg class="Rectangle_1">
+                <rect id="Rectangle_1" rx="0" ry="0" x="0" y="0" width="375" height="330">
                 </rect>
             </svg>
-            <div id="Reminder">
-                <span>Reminder</span>
+            <div id="level___10">
+                <span>level : 10</span>
             </div>
-            <div id="ID11_30">
-                <span>11:30</span>
+            <div id="ID200xp__left">
+                <span>200xp <br />left</span>
             </div>
-        </div>
-        <div id="Group_4_A0_Group_8">
-            <svg class="Rectangle_8_A0_Rectangle_3">
-                <rect id="Rectangle_8_A0_Rectangle_3" rx="43" ry="43" x="0" y="0" width="374" height="86">
-                </rect>
-            </svg>
-            <div id="Notification">
-                <span>Notification</span>
+            <div id="Level_bar">
+                <div id="level_10">
+                    <span>level 10</span>
+                </div>
+                <div id="level_11">
+                    <span>level 11</span>
+                </div>
             </div>
-            <div id="Lorem_Ipsum_is_simply_dummy_te">
-                <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry </span>
+            <div id="Group_1">
+                <svg class="Line_1">
+                    <path id="Line_1" d="M 0 0 L 270 0">
+                    </path>
+                </svg>
+                <svg class="Line_2">
+                    <path id="Line_2" d="M 0 0 L 224 0">
+                    </path>
+                </svg>
+            </div>
+            <div id="Group_4">
+                <svg class="Rectangle_8">
+                    <rect id="Rectangle_8" rx="43" ry="43" x="0" y="0" width="335" height="86">
+                    </rect>
+                </svg>
+                <div id="Reminder">
+                    <span>Reminder</span>
+                </div>
+                <div id="ID11_30">
+                    <span>11:30</span>
+                </div>
+            </div>
+            <div id="Group_4_A0_Group_9">
+                <svg class="Rectangle_8_A0_Rectangle_3">
+                    <rect id="Rectangle_8_A0_Rectangle_3" rx="43" ry="43" x="0" y="0" width="335" height="86">
+                    </rect>
+                </svg>
+                <div id="Notification">
+                    <span>Notification</span>
+                </div>
+                <div id="Lorem_Ipsum_is_simply_dummy_te">
+                    <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry </span>
+                </div>
             </div>
         </div>
     </div>
