--- a/SmartSchoolSystem/SmartSchoolSystem/ExportHTML/Notification.html
+++ b/SmartSchoolSystem/SmartSchoolSystem/ExportHTML/Notification.html
@@ -3,45 +3,57 @@
 <head>
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-<title>Notification</title>
+<title>SSS</title>
 <style id="applicationStylesheet" type="text/css">
 	body {
 		margin: 0;
 		padding: 0;
 	}
 	:root {
-		--web-view-ids: Notification;
+		--web-view-ids: iPhone_6_7_8___3;
 	}
-	#Notification * {
+	#iPhone_6_7_8___3 * {
 		margin: 0;
 		padding: 0;
 	}
-	#Notification {
+	#iPhone_6_7_8___3 {
 		position: absolute;
 		box-sizing: border-box;
+		transform: translateX(-50%) translateY(-50%);
+		left: 50%;
+		top: 50%;
 		background: #E5E5E5;
-		width: 414px;
-		height: 736px;
+		width: 375px;
+		height: 667px;
 		font-family: "Helvetica";
 		background-color: rgba(255,255,255,1);
 		overflow: hidden;
 		margin: 0;
 		padding: 0;
 		opacity: 1;
-		--web-view-name: Notification;
-		--web-view-id: Notification;
+		--web-view-name: iPhone 6/7/8 – 3;
+		--web-view-id: iPhone_6_7_8___3;
 		--web-enable-deep-linking: true;
+	}
+	#Group_8 {
+		opacity: 1;
+		position: absolute;
+		width: 375px;
+		height: 667px;
+		left: 0px;
+		top: 0px;
+		overflow: visible;
 	}
 	#Reminder {
 		opacity: 1;
 		position: absolute;
-		width: 413px;
-		height: 598px;
+		width: 374px;
+		height: 473px;
 		left: 0.5px;
 		top: 72px;
 		overflow: hidden;
 	}
-	#Reminder_A1_Group_9 {
+	#Reminder_A2_Group_18 {
 		opacity: 1;
 		position: absolute;
 		width: 414px;
@@ -53,7 +65,7 @@
 	#Notification_here {
 		opacity: 1;
 		position: absolute;
-		left: 79.5px;
+		left: 60.5px;
 		top: 0px;
 		box-sizing: border-box;
 		margin: 0;
@@ -71,8 +83,8 @@
 	#Lorem_Ipsum_is_simply_dummy_te {
 		opacity: 1;
 		position: absolute;
-		left: 38.5px;
-		top: 28px;
+		left: 19.5px;
+		top: 29px;
 		box-sizing: border-box;
 		margin: 0;
 		padding: 0;
@@ -106,72 +118,7 @@
 		width: 414.002px;
 		height: 2px;
 	}
-	#Reminder_A1_Group_10 {
-		opacity: 1;
-		position: absolute;
-		width: 414px;
-		height: 138.5px;
-		left: 395px;
-		top: 2px;
-		overflow: visible;
-	}
-	#Notification_here_A1_Text_18 {
-		opacity: 1;
-		position: absolute;
-		left: 79.5px;
-		top: 0px;
-		box-sizing: border-box;
-		margin: 0;
-		padding: 0;
-		overflow: hidden;
-		width: 254px;
-		height: 82px;
-		text-align: center;
-		font-family: Gibson, "Helvetica";
-		font-style: normal;
-		font-weight: normal;
-		font-size: 20px;
-		color: rgba(89,215,253,1);
-	}
-	#Lorem_Ipsum_is_simply_dummy_te_A1_Text_19 {
-		opacity: 1;
-		position: absolute;
-		left: 38.5px;
-		top: 28px;
-		box-sizing: border-box;
-		margin: 0;
-		padding: 0;
-		overflow: hidden;
-		width: 337px;
-		height: 96px;
-		line-height: 16px;
-		margin-top: -2px;
-		text-align: center;
-		font-family: Gibson, "Helvetica";
-		font-style: normal;
-		font-weight: normal;
-		font-size: 12px;
-		color: rgba(89,215,253,1);
-	}
-	#divider_A1_Line_4 {
-		opacity: 1;
-		fill: transparent;
-		stroke: rgb(240, 240, 240);
-		stroke-width: 1px;
-		stroke-linejoin: miter;
-		stroke-linecap: butt;
-		stroke-miterlimit: 4;
-		shape-rendering: auto;
-	}
-	.divider_A1_Line_4 {
-		overflow: visible;
-		position: absolute;
-		top: 137.5px;
-		left: 0px;
-		width: 414.002px;
-		height: 2px;
-	}
-	#Reminder_A1_Group_11 {
+	#Reminder_A2_Group_19 {
 		opacity: 1;
 		position: absolute;
 		width: 414px;
@@ -180,10 +127,10 @@
 		top: 163px;
 		overflow: visible;
 	}
-	#Notification_here_A1_Text_20 {
+	#Notification_here_A2_Text_30 {
 		opacity: 1;
 		position: absolute;
-		left: 79.5px;
+		left: 60.5px;
 		top: 0px;
 		box-sizing: border-box;
 		margin: 0;
@@ -198,11 +145,11 @@
 		font-size: 20px;
 		color: rgba(89,215,253,1);
 	}
-	#Lorem_Ipsum_is_simply_dummy_te_A1_Text_21 {
+	#Lorem_Ipsum_is_simply_dummy_te_A2_Text_31 {
 		opacity: 1;
 		position: absolute;
-		left: 38.5px;
-		top: 28px;
+		left: 19.5px;
+		top: 29px;
 		box-sizing: border-box;
 		margin: 0;
 		padding: 0;
@@ -218,7 +165,7 @@
 		font-size: 12px;
 		color: rgba(89,215,253,1);
 	}
-	#divider_A1_Line_5 {
+	#divider_A2_Line_7 {
 		opacity: 1;
 		fill: transparent;
 		stroke: rgb(240, 240, 240);
@@ -228,7 +175,7 @@
 		stroke-miterlimit: 4;
 		shape-rendering: auto;
 	}
-	.divider_A1_Line_5 {
+	.divider_A2_Line_7 {
 		overflow: visible;
 		position: absolute;
 		top: 137.5px;
@@ -236,72 +183,7 @@
 		width: 414.002px;
 		height: 2px;
 	}
-	#Reminder_A1_Group_12 {
-		opacity: 1;
-		position: absolute;
-		width: 414px;
-		height: 138.5px;
-		left: 395px;
-		top: 163px;
-		overflow: visible;
-	}
-	#Notification_here_A1_Text_22 {
-		opacity: 1;
-		position: absolute;
-		left: 79.5px;
-		top: 0px;
-		box-sizing: border-box;
-		margin: 0;
-		padding: 0;
-		overflow: hidden;
-		width: 254px;
-		height: 82px;
-		text-align: center;
-		font-family: Gibson, "Helvetica";
-		font-style: normal;
-		font-weight: normal;
-		font-size: 20px;
-		color: rgba(89,215,253,1);
-	}
-	#Lorem_Ipsum_is_simply_dummy_te_A1_Text_23 {
-		opacity: 1;
-		position: absolute;
-		left: 38.5px;
-		top: 28px;
-		box-sizing: border-box;
-		margin: 0;
-		padding: 0;
-		overflow: hidden;
-		width: 337px;
-		height: 96px;
-		line-height: 16px;
-		margin-top: -2px;
-		text-align: center;
-		font-family: Gibson, "Helvetica";
-		font-style: normal;
-		font-weight: normal;
-		font-size: 12px;
-		color: rgba(89,215,253,1);
-	}
-	#divider_A1_Line_6 {
-		opacity: 1;
-		fill: transparent;
-		stroke: rgb(240, 240, 240);
-		stroke-width: 1px;
-		stroke-linejoin: miter;
-		stroke-linecap: butt;
-		stroke-miterlimit: 4;
-		shape-rendering: auto;
-	}
-	.divider_A1_Line_6 {
-		overflow: visible;
-		position: absolute;
-		top: 137.5px;
-		left: 0px;
-		width: 414.002px;
-		height: 2px;
-	}
-	#Reminder_A1_Group_13 {
+	#Reminder_A2_Group_20 {
 		opacity: 1;
 		position: absolute;
 		width: 414px;
@@ -310,10 +192,10 @@
 		top: 324px;
 		overflow: visible;
 	}
-	#Notification_here_A1_Text_24 {
+	#Notification_here_A2_Text_32 {
 		opacity: 1;
 		position: absolute;
-		left: 79.5px;
+		left: 60.5px;
 		top: 0px;
 		box-sizing: border-box;
 		margin: 0;
@@ -328,11 +210,11 @@
 		font-size: 20px;
 		color: rgba(89,215,253,1);
 	}
-	#Lorem_Ipsum_is_simply_dummy_te_A1_Text_25 {
+	#Lorem_Ipsum_is_simply_dummy_te_A2_Text_33 {
 		opacity: 1;
 		position: absolute;
-		left: 38.5px;
-		top: 28px;
+		left: 19.5px;
+		top: 29px;
 		box-sizing: border-box;
 		margin: 0;
 		padding: 0;
@@ -348,7 +230,7 @@
 		font-size: 12px;
 		color: rgba(89,215,253,1);
 	}
-	#divider_A1_Line_7 {
+	#divider_A2_Line_8 {
 		opacity: 1;
 		fill: transparent;
 		stroke: rgb(240, 240, 240);
@@ -358,202 +240,7 @@
 		stroke-miterlimit: 4;
 		shape-rendering: auto;
 	}
-	.divider_A1_Line_7 {
-		overflow: visible;
-		position: absolute;
-		top: 137.5px;
-		left: 0px;
-		width: 414.002px;
-		height: 2px;
-	}
-	#Reminder_A1_Group_14 {
-		opacity: 1;
-		position: absolute;
-		width: 414px;
-		height: 138.5px;
-		left: 395px;
-		top: 324px;
-		overflow: visible;
-	}
-	#Notification_here_A1_Text_26 {
-		opacity: 1;
-		position: absolute;
-		left: 79.5px;
-		top: 0px;
-		box-sizing: border-box;
-		margin: 0;
-		padding: 0;
-		overflow: hidden;
-		width: 254px;
-		height: 82px;
-		text-align: center;
-		font-family: Gibson, "Helvetica";
-		font-style: normal;
-		font-weight: normal;
-		font-size: 20px;
-		color: rgba(89,215,253,1);
-	}
-	#Lorem_Ipsum_is_simply_dummy_te_A1_Text_27 {
-		opacity: 1;
-		position: absolute;
-		left: 38.5px;
-		top: 28px;
-		box-sizing: border-box;
-		margin: 0;
-		padding: 0;
-		overflow: hidden;
-		width: 337px;
-		height: 96px;
-		line-height: 16px;
-		margin-top: -2px;
-		text-align: center;
-		font-family: Gibson, "Helvetica";
-		font-style: normal;
-		font-weight: normal;
-		font-size: 12px;
-		color: rgba(89,215,253,1);
-	}
-	#divider_A1_Line_8 {
-		opacity: 1;
-		fill: transparent;
-		stroke: rgb(240, 240, 240);
-		stroke-width: 1px;
-		stroke-linejoin: miter;
-		stroke-linecap: butt;
-		stroke-miterlimit: 4;
-		shape-rendering: auto;
-	}
-	.divider_A1_Line_8 {
-		overflow: visible;
-		position: absolute;
-		top: 137.5px;
-		left: 0px;
-		width: 414.002px;
-		height: 2px;
-	}
-	#Reminder_A1_Group_15 {
-		opacity: 1;
-		position: absolute;
-		width: 414px;
-		height: 138.5px;
-		left: 0px;
-		top: 485px;
-		overflow: visible;
-	}
-	#Notification_here_A1_Text_28 {
-		opacity: 1;
-		position: absolute;
-		left: 79.5px;
-		top: 0px;
-		box-sizing: border-box;
-		margin: 0;
-		padding: 0;
-		overflow: hidden;
-		width: 254px;
-		height: 82px;
-		text-align: center;
-		font-family: Gibson, "Helvetica";
-		font-style: normal;
-		font-weight: normal;
-		font-size: 20px;
-		color: rgba(89,215,253,1);
-	}
-	#Lorem_Ipsum_is_simply_dummy_te_A1_Text_29 {
-		opacity: 1;
-		position: absolute;
-		left: 38.5px;
-		top: 28px;
-		box-sizing: border-box;
-		margin: 0;
-		padding: 0;
-		overflow: hidden;
-		width: 337px;
-		height: 96px;
-		line-height: 16px;
-		margin-top: -2px;
-		text-align: center;
-		font-family: Gibson, "Helvetica";
-		font-style: normal;
-		font-weight: normal;
-		font-size: 12px;
-		color: rgba(89,215,253,1);
-	}
-	#divider_A1_Line_9 {
-		opacity: 1;
-		fill: transparent;
-		stroke: rgb(240, 240, 240);
-		stroke-width: 1px;
-		stroke-linejoin: miter;
-		stroke-linecap: butt;
-		stroke-miterlimit: 4;
-		shape-rendering: auto;
-	}
-	.divider_A1_Line_9 {
-		overflow: visible;
-		position: absolute;
-		top: 137.5px;
-		left: 0px;
-		width: 414.002px;
-		height: 2px;
-	}
-	#Reminder_A1_Group_16 {
-		opacity: 1;
-		position: absolute;
-		width: 414px;
-		height: 138.5px;
-		left: 395px;
-		top: 485px;
-		overflow: visible;
-	}
-	#Notification_here_A1_Text_30 {
-		opacity: 1;
-		position: absolute;
-		left: 79.5px;
-		top: 0px;
-		box-sizing: border-box;
-		margin: 0;
-		padding: 0;
-		overflow: hidden;
-		width: 254px;
-		height: 82px;
-		text-align: center;
-		font-family: Gibson, "Helvetica";
-		font-style: normal;
-		font-weight: normal;
-		font-size: 20px;
-		color: rgba(89,215,253,1);
-	}
-	#Lorem_Ipsum_is_simply_dummy_te_A1_Text_31 {
-		opacity: 1;
-		position: absolute;
-		left: 38.5px;
-		top: 28px;
-		box-sizing: border-box;
-		margin: 0;
-		padding: 0;
-		overflow: hidden;
-		width: 337px;
-		height: 96px;
-		line-height: 16px;
-		margin-top: -2px;
-		text-align: center;
-		font-family: Gibson, "Helvetica";
-		font-style: normal;
-		font-weight: normal;
-		font-size: 12px;
-		color: rgba(89,215,253,1);
-	}
-	#divider_A1_Line_10 {
-		opacity: 1;
-		fill: transparent;
-		stroke: rgb(240, 240, 240);
-		stroke-width: 1px;
-		stroke-linejoin: miter;
-		stroke-linecap: butt;
-		stroke-miterlimit: 4;
-		shape-rendering: auto;
-	}
-	.divider_A1_Line_10 {
+	.divider_A2_Line_8 {
 		overflow: visible;
 		position: absolute;
 		top: 137.5px;
@@ -569,21 +256,21 @@
 		transform: matrix(1,0,0,1,0,0);
 		overflow: visible;
 		position: absolute;
-		top: 670px;
+		top: 601px;
 		left: 0px;
-		width: 413px;
+		width: 374px;
 		height: 66px;
 	}
 	#button_text {
 		opacity: 1;
 		position: absolute;
 		left: 31px;
-		top: 693px;
+		top: 624px;
 		box-sizing: border-box;
 		margin: 0;
 		padding: 0;
 		overflow: hidden;
-		width: 353px;
+		width: 314px;
 		height: 23px;
 		line-height: 24px;
 		margin-top: -4px;
@@ -601,7 +288,7 @@
 	.Rectangle_5 {
 		position: absolute;
 		overflow: visible;
-		width: 414px;
+		width: 375px;
 		height: 72px;
 		left: 0px;
 		top: 0px;
@@ -611,7 +298,7 @@
 		position: absolute;
 		width: 56px;
 		height: 60px;
-		left: 305px;
+		left: 266px;
 		top: 12px;
 		overflow: visible;
 	}
@@ -682,7 +369,7 @@
 		font-size: 14px;
 		color: rgba(89,215,253,1);
 	}
-	#ID3__A1_Text_36 {
+	#ID3__A2_Text_38 {
 		opacity: 1;
 		position: absolute;
 		left: 27px;
@@ -705,7 +392,7 @@
 		position: absolute;
 		width: 106px;
 		height: 27px;
-		left: 158.377px;
+		left: 138.323px;
 		top: 29px;
 		overflow: visible;
 	}
@@ -730,135 +417,77 @@
 </style>
 </head>
 <body>
-<div id="Notification">
-	<div id="Reminder">
-		<div id="Reminder_A1_Group_9">
-			<div id="Notification_here">
-				<span>Notification here</span>
+<div id="iPhone_6_7_8___3">
+	<div id="Group_8">
+		<div id="Reminder">
+			<div id="Reminder_A2_Group_18">
+				<div id="Notification_here">
+					<span>Notification here</span>
+				</div>
+				<div id="Lorem_Ipsum_is_simply_dummy_te">
+					<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s<br/><br/>Click to expand</span>
+				</div>
+				<svg class="divider">
+					<path id="divider" d="M 0 1 L 414 0">
+					</path>
+				</svg>
 			</div>
-			<div id="Lorem_Ipsum_is_simply_dummy_te">
-				<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s<br/><br/>Click to expand</span>
+			<div id="Reminder_A2_Group_19">
+				<div id="Notification_here_A2_Text_30">
+					<span>Notification here</span>
+				</div>
+				<div id="Lorem_Ipsum_is_simply_dummy_te_A2_Text_31">
+					<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s<br/><br/>Click to expand</span>
+				</div>
+				<svg class="divider_A2_Line_7">
+					<path id="divider_A2_Line_7" d="M 0 1 L 414 0">
+					</path>
+				</svg>
 			</div>
-			<svg class="divider">
-				<path id="divider" d="M 0 1 L 414 0">
-				</path>
-			</svg>
+			<div id="Reminder_A2_Group_20">
+				<div id="Notification_here_A2_Text_32">
+					<span>Notification here</span>
+				</div>
+				<div id="Lorem_Ipsum_is_simply_dummy_te_A2_Text_33">
+					<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s<br/><br/>Click to expand</span>
+				</div>
+				<svg class="divider_A2_Line_8">
+					<path id="divider_A2_Line_8" d="M 0 1 L 414 0">
+					</path>
+				</svg>
+			</div>
 		</div>
-		<div id="Reminder_A1_Group_10">
-			<div id="Notification_here_A1_Text_18">
-				<span>Notification here</span>
-			</div>
-			<div id="Lorem_Ipsum_is_simply_dummy_te_A1_Text_19">
-				<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s<br/><br/>Click to expand</span>
-			</div>
-			<svg class="divider_A1_Line_4">
-				<path id="divider_A1_Line_4" d="M 0 1 L 414 0">
-				</path>
-			</svg>
+		<svg class="rectangle" viewBox="0 0 374 66">
+			<path id="rectangle" d="M 0 0 L 374 0 L 374 66 L 0 66 L 0 0 Z">
+			</path>
+		</svg>
+		<div id="button_text">
+			<span>Notification</span>
 		</div>
-		<div id="Reminder_A1_Group_11">
-			<div id="Notification_here_A1_Text_20">
-				<span>Notification here</span>
+		<svg class="Rectangle_5">
+			<rect id="Rectangle_5" rx="0" ry="0" x="0" y="0" width="375" height="72">
+			</rect>
+		</svg>
+		<div id="comments_link">
+			<div id="reminder">
+				<span>reminder</span>
 			</div>
-			<div id="Lorem_Ipsum_is_simply_dummy_te_A1_Text_21">
-				<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s<br/><br/>Click to expand</span>
+			<div id="ID3_">
+				<span>3<br/></span>
 			</div>
-			<svg class="divider_A1_Line_5">
-				<path id="divider_A1_Line_5" d="M 0 1 L 414 0">
-				</path>
-			</svg>
 		</div>
-		<div id="Reminder_A1_Group_12">
-			<div id="Notification_here_A1_Text_22">
-				<span>Notification here</span>
+		<div id="followers_link">
+			<div id="notification">
+				<span>notification</span>
 			</div>
-			<div id="Lorem_Ipsum_is_simply_dummy_te_A1_Text_23">
-				<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s<br/><br/>Click to expand</span>
+			<div id="ID3__A2_Text_38">
+				<span>3<br/></span>
 			</div>
-			<svg class="divider_A1_Line_6">
-				<path id="divider_A1_Line_6" d="M 0 1 L 414 0">
-				</path>
-			</svg>
 		</div>
-		<div id="Reminder_A1_Group_13">
-			<div id="Notification_here_A1_Text_24">
-				<span>Notification here</span>
+		<div id="Group_5">
+			<div id="main_profile">
+				<span>main profile</span>
 			</div>
-			<div id="Lorem_Ipsum_is_simply_dummy_te_A1_Text_25">
-				<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s<br/><br/>Click to expand</span>
-			</div>
-			<svg class="divider_A1_Line_7">
-				<path id="divider_A1_Line_7" d="M 0 1 L 414 0">
-				</path>
-			</svg>
-		</div>
-		<div id="Reminder_A1_Group_14">
-			<div id="Notification_here_A1_Text_26">
-				<span>Notification here</span>
-			</div>
-			<div id="Lorem_Ipsum_is_simply_dummy_te_A1_Text_27">
-				<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s<br/><br/>Click to expand</span>
-			</div>
-			<svg class="divider_A1_Line_8">
-				<path id="divider_A1_Line_8" d="M 0 1 L 414 0">
-				</path>
-			</svg>
-		</div>
-		<div id="Reminder_A1_Group_15">
-			<div id="Notification_here_A1_Text_28">
-				<span>Notification here</span>
-			</div>
-			<div id="Lorem_Ipsum_is_simply_dummy_te_A1_Text_29">
-				<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s<br/><br/>Click to expand</span>
-			</div>
-			<svg class="divider_A1_Line_9">
-				<path id="divider_A1_Line_9" d="M 0 1 L 414 0">
-				</path>
-			</svg>
-		</div>
-		<div id="Reminder_A1_Group_16">
-			<div id="Notification_here_A1_Text_30">
-				<span>Notification here</span>
-			</div>
-			<div id="Lorem_Ipsum_is_simply_dummy_te_A1_Text_31">
-				<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s<br/><br/>Click to expand</span>
-			</div>
-			<svg class="divider_A1_Line_10">
-				<path id="divider_A1_Line_10" d="M 0 1 L 414 0">
-				</path>
-			</svg>
-		</div>
-	</div>
-	<svg class="rectangle" viewBox="0 0 413 66">
-		<path id="rectangle" d="M 0 0 L 413 0 L 413 66 L 0 66 L 0 0 Z">
-		</path>
-	</svg>
-	<div id="button_text">
-		<span>Notification</span>
-	</div>
-	<svg class="Rectangle_5">
-		<rect id="Rectangle_5" rx="0" ry="0" x="0" y="0" width="414" height="72">
-		</rect>
-	</svg>
-	<div id="comments_link">
-		<div id="reminder">
-			<span>reminder</span>
-		</div>
-		<div id="ID3_">
-			<span>3<br/></span>
-		</div>
-	</div>
-	<div id="followers_link">
-		<div id="notification">
-			<span>notification</span>
-		</div>
-		<div id="ID3__A1_Text_36">
-			<span>3<br/></span>
-		</div>
-	</div>
-	<div id="Group_5">
-		<div id="main_profile">
-			<span>main profile</span>
 		</div>
 	</div>
 </div>
