Fixed most visual bugs
Centered the visuals on screen

--- a/SmartSchoolSystem/SmartSchoolSystem/ExportHTML/Notification.html
+++ b/SmartSchoolSystem/SmartSchoolSystem/ExportHTML/Notification.html
@@ -10,13 +10,13 @@
 		padding: 0;
 	}
 	:root {
-		--web-view-ids: iPhone_6_7_8___3;
+		--web-view-ids: Notification;
 	}
-	#iPhone_6_7_8___3 * {
+	#Notification * {
 		margin: 0;
 		padding: 0;
 	}
-	#iPhone_6_7_8___3 {
+	#Notification {
 		position: absolute;
 		box-sizing: border-box;
 		transform: translateX(-50%) translateY(-50%);
@@ -31,8 +31,8 @@
 		margin: 0;
 		padding: 0;
 		opacity: 1;
-		--web-view-name: iPhone 6/7/8 – 3;
-		--web-view-id: iPhone_6_7_8___3;
+		--web-view-name: Notification;
+		--web-view-id: Notification;
 		--web-enable-deep-linking: true;
 	}
 	#Group_8 {
@@ -417,7 +417,7 @@
 </style>
 </head>
 <body>
-<div id="iPhone_6_7_8___3">
+<div id="Notification">
 	<div id="Group_8">
 		<div id="Reminder">
 			<div id="Reminder_A2_Group_18">
