--- a/SmartSchoolSystem/SmartSchoolSystem/SmartSchoolSystem/www/Reminder.html
+++ b/SmartSchoolSystem/SmartSchoolSystem/SmartSchoolSystem/www/Reminder.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <!--
-            Customize the content security policy in the meta tag below as needed. Add 'unsafe-inline' to default-src to enable inline JavaScript.
-            For details, see http://go.microsoft.com/fwlink/?LinkID=617521
-        -->
+                Customize the content security policy in the meta tag below as needed. Add 'unsafe-inline' to default-src to enable inline JavaScript.
+                For details, see http://go.microsoft.com/fwlink/?LinkID=617521
+            -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
 
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
@@ -20,17 +20,20 @@
         }
 
         :root {
-            --web-view-ids: iPhone_6_7_8___2;
+            --web-view-ids: Reminder;
         }
 
-        #iPhone_6_7_8___2 * {
+        #Reminder * {
             margin: 0;
             padding: 0;
         }
 
-        #iPhone_6_7_8___2 {
+        #Reminder {
             position: absolute;
             box-sizing: border-box;
+            transform: translateX(-50%) translateY(-50%);
+            left: 50%;
+            top: 50%;
             background: #E5E5E5;
             width: 375px;
             height: 667px;
@@ -40,8 +43,8 @@
             margin: 0;
             padding: 0;
             opacity: 1;
-            --web-view-name: iPhone 6/7/8 – 2;
-            --web-view-id: iPhone_6_7_8___2;
+            --web-view-name: Reminder;
+            --web-view-id: Reminder;
             --web-enable-deep-linking: true;
         }
 
@@ -55,7 +58,7 @@
             overflow: visible;
         }
 
-        #Reminder {
+        #Reminder_A1_RepeatGrid_1 {
             opacity: 1;
             position: absolute;
             width: 374.5px;
@@ -442,9 +445,9 @@
     </style>
 </head>
 <body>
-    <div id="iPhone_6_7_8___2">
+    <div id="Reminder">
         <div id="Group_7">
-            <div id="Reminder">
+            <div id="Reminder_A1_RepeatGrid_1">
                 <div id="Reminder_A1_Group_11">
                     <div id="reminder_right_here">
                         <span>reminder right here</span>
