--- a/SmartSchoolSystem/SmartSchoolSystem/ExportHTML/Reminder.html
+++ b/SmartSchoolSystem/SmartSchoolSystem/ExportHTML/Reminder.html
@@ -10,15 +10,18 @@
 		padding: 0;
 	}
 	:root {
-		--web-view-ids: iPhone_6_7_8___2;
+		--web-view-ids: Reminder;
 	}
-	#iPhone_6_7_8___2 * {
+	#Reminder * {
 		margin: 0;
 		padding: 0;
 	}
-	#iPhone_6_7_8___2 {
+	#Reminder {
 		position: absolute;
 		box-sizing: border-box;
+		transform: translateX(-50%) translateY(-50%);
+		left: 50%;
+		top: 50%;
 		background: #E5E5E5;
 		width: 375px;
 		height: 667px;
@@ -28,8 +31,8 @@
 		margin: 0;
 		padding: 0;
 		opacity: 1;
-		--web-view-name: iPhone 6/7/8 – 2;
-		--web-view-id: iPhone_6_7_8___2;
+		--web-view-name: Reminder;
+		--web-view-id: Reminder;
 		--web-enable-deep-linking: true;
 	}
 	#Group_7 {
@@ -41,7 +44,7 @@
 		top: 0px;
 		overflow: visible;
 	}
-	#Reminder {
+	#Reminder_A1_RepeatGrid_1 {
 		opacity: 1;
 		position: absolute;
 		width: 374.5px;
@@ -402,9 +405,9 @@
 </style>
 </head>
 <body>
-<div id="iPhone_6_7_8___2">
+<div id="Reminder">
 	<div id="Group_7">
-		<div id="Reminder">
+		<div id="Reminder_A1_RepeatGrid_1">
 			<div id="Reminder_A1_Group_11">
 				<div id="reminder_right_here">
 					<span>reminder right here</span>
