--- a/SmartSchoolSystem/SmartSchoolSystem/SmartSchoolSystem/www/index.html
+++ b/SmartSchoolSystem/SmartSchoolSystem/SmartSchoolSystem/www/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <!--
-        Customize the content security policy in the meta tag below as needed. Add 'unsafe-inline' to default-src to enable inline JavaScript.
-        For details, see http://go.microsoft.com/fwlink/?LinkID=617521
-    -->
+               Customize the content security policy in the meta tag below as needed. Add 'unsafe-inline' to default-src to enable inline JavaScript.
+               For details, see http://go.microsoft.com/fwlink/?LinkID=617521
+           -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
 
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
@@ -20,17 +20,20 @@
         }
 
         :root {
-            --web-view-ids: iPhone_6_7_8___1;
+            --web-view-ids: Main;
         }
 
-        #iPhone_6_7_8___1 * {
+        #Main * {
             margin: 0;
             padding: 0;
         }
 
-        #iPhone_6_7_8___1 {
+        #Main {
             position: absolute;
             box-sizing: border-box;
+            transform: translateX(-50%) translateY(-50%);
+            left: 50%;
+            top: 50%;
             background: #E5E5E5;
             width: 375px;
             height: 667px;
@@ -40,8 +43,8 @@
             margin: 0;
             padding: 0;
             opacity: 1;
-            --web-view-name: iPhone 6/7/8 – 1;
-            --web-view-id: iPhone_6_7_8___1;
+            --web-view-name: Main;
+            --web-view-id: Main;
             --web-enable-deep-linking: true;
         }
 
@@ -561,7 +564,7 @@
     </style>
 </head>
 <body>
-    <div id="iPhone_6_7_8___1">
+    <div id="Main">
         <div id="Group_6">
             <svg class="rectangle" viewBox="0 0 375 66">
                 <path id="rectangle" d="M 0 0 L 375 0 L 375 66 L 0 66 L 0 0 Z">
