IGNORE THIS UPDATE!

--- a/SmartSchoolSystem/SmartSchoolSystem/SmartSchoolSystem/www/QRScanner.html
+++ b/SmartSchoolSystem/SmartSchoolSystem/SmartSchoolSystem/www/QRScanner.html
@@ -1,39 +1,92 @@
 ﻿<!DOCTYPE html>
+<!--
+    Licensed to the Apache Software Foundation (ASF) under one
+    or more contributor license agreements.  See the NOTICE file
+    distributed with this work for additional information
+    regarding copyright ownership.  The ASF licenses this file
+    to you under the Apache License, Version 2.0 (the
+    "License"); you may not use this file except in compliance
+    with the License.  You may obtain a copy of the License at
+    http://www.apache.org/licenses/LICENSE-2.0
+    Unless required by applicable law or agreed to in writing,
+    software distributed under the License is distributed on an
+    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+     KIND, either express or implied.  See the License for the
+    specific language governing permissions and limitations
+    under the License.
+-->
 <html>
 <head>
     <!--
-               Customize the content security policy in the meta tag below as needed. Add 'unsafe-inline' to default-src to enable inline JavaScript.
-               For details, see http://go.microsoft.com/fwlink/?LinkID=617521
-           -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
-
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    Customize this policy to fit your own app's needs. For more guidance, see:
+        https://github.com/apache/cordova-plugin-whitelist/blob/master/README.md#content-security-policy
+    Some notes:
+        * gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
+        * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
+        * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
+            * Enable inline JS: add 'unsafe-inline' to default-src
+    -->
+    <meta http-equiv="Content-Security-Policy"
+          content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval';
+            style-src 'self' 'unsafe-inline';
+            media-src *;
+            script-src 'self' 'unsafe-inline';
+            img-src 'self' data: content:;">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-    <title>QR Scanner</title>
+    <title>Take Pictures</title>
     <style>
-        body{
-            text-align: center;
-            margin:0 auto;
-            color: mediumpurple;
+        #btn {
+            font-size: 1.5rem;
+            line-height: 2.5rem;
+            margin: 1rem;
+        }
+
+        #msg {
+            border: 1px solid #eee;
+            padding: 1rem;
+            margin: 1rem;
         }
     </style>
 </head>
 <body>
-    <div>
-
-        <div>
-            <img src="images/cordova.png" alt="image" id="photo" />
-        </div>
-
-        <div>
-            <button id="btn_scan" onclick="scan()">SCAN!</button>
-        </div>
-
+    <div class="page">
+        <p><img src="img/logo.png" alt="image" id="photo" /></p>
+        <p><button id="btn">Take Picture</button></p>
+        <p id="msg"></p>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="scripts/platformOverrides.js"></script>
-    <script type="text/javascript" src="scripts/QRscanner.js"></script>
+    <script>
+        let app = {
+            init: function () {
+                document.getElementById('btn').addEventListener('click', app.takephoto);
+            },
+            takephoto: function () {
+                let opts = {
+                    quality: 80,
+                    destinationType: Camera.DestinationType.FILE_URI,
+                    sourceType: Camera.PictureSourceType.CAMERA,
+                    mediaType: Camera.MediaType.PICTURE,
+                    encodingType: Camera.EncodingType.JPEG,
+                    cameraDirection: Camera.Direction.BACK,
+                    targetWidth: 300,
+                    targetHeight: 400
+                };
+
+                navigator.camera.getPicture(app.ftw, app.wtf, opts);
+            },
+            ftw: function (imgURI) {
+                document.getElementById('msg').textContent = imgURI;
+                document.getElementById('photo').src = imgURI;
+
+            },
+            wtf: function (msg) {
+                document.getElementById('msg').textContent = msg;
+            }
+        };
+
+        document.addEventListener('deviceready', app.init);
+    </script>
 </body>
 </html>
