QR code scanner added
NOTE: the scanner does not work it opens the camera and takes a picture

--- a/SmartSchoolSystem/SmartSchoolSystem/SmartSchoolSystem/www/QRScanner.html
+++ b/SmartSchoolSystem/SmartSchoolSystem/SmartSchoolSystem/www/QRScanner.html
@@ -37,24 +37,21 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <title>Take Pictures</title>
     <style>
-        #btn {
-            font-size: 1.5rem;
-            line-height: 2.5rem;
-            margin: 1rem;
+        body{
+            text-align:center;
+            font-family:Arial, Helvetica, sans-serif;
         }
 
-        #msg {
-            border: 1px solid #eee;
-            padding: 1rem;
-            margin: 1rem;
+        #btn {
+            text-decoration: none;
+
         }
     </style>
 </head>
 <body>
     <div class="page">
-        <p><img src="img/logo.png" alt="image" id="photo" /></p>
-        <p><button id="btn">Take Picture</button></p>
-        <p id="msg"></p>
+        <p><img src="images/cordova.png" alt="image" id="photo" width="600" height="800"/></p>
+        <p><button id="btn">Scan</button></p>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
     <script>
@@ -77,8 +74,7 @@
                 navigator.camera.getPicture(app.ftw, app.wtf, opts);
             },
             ftw: function (imgURI) {
-                document.getElementById('msg').textContent = imgURI;
-                document.getElementById('photo').src = imgURI;
+                alert("Attendance Updated. +500xp");
 
             },
             wtf: function (msg) {
