--- a/SmartSchoolSystem/SmartSchoolSystem/SmartSchoolSystem/www/QRScanner.html
+++ b/SmartSchoolSystem/SmartSchoolSystem/SmartSchoolSystem/www/QRScanner.html
@@ -50,7 +50,7 @@
 </head>
 <body>
     <div class="page">
-        <p><img src="" alt="image" id="photo" width="100" height="100"/></p>
+        <p><img src="images/cordova.png" alt="image" id="photo" width="100" height="100"/></p>
         <p><button id="btn">Scan</button></p>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
